<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item android:id="@+id/nav_challenge"
        android:title="@string/challenge"
        android:icon="@drawable/ic_baseline_people_24"/>

    <item android:id="@+id/nav_leaderboard"
        android:title="@string/leaderboard"
        android:icon="@drawable/ic_baseline_leaderboard_24"/>

    <item android:id="@+id/nav_create"
        android:title="@string/create"
        android:icon="@drawable/ic_baseline_create_24"/>

    <item android:id="@+id/nav_account"
        android:title="@string/avtar"
        android:icon="@drawable/ic_baseline_account_circle_24"/>

</menu>