<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/slideshow_text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/info_of_this_week"
            android:textColor="@color/white"
            android:elevation="5dp"
            android:shadowColor="@color/black"
            android:background="@drawable/gradient_1"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/headline"
            android:layout_marginBottom="2dp"
            app:drawableLeftCompat="@drawable/top"
            app:drawableRightCompat="@drawable/top" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/top_card"
            app:cardElevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:iss_auto_cycle="true"
                    app:iss_period="1000"
                    app:iss_delay="1000"
                    app:iss_title_background="@drawable/gradient"
                    app:iss_placeholder="@drawable/placeholder"
                    app:iss_error_image="@drawable/error"
                    app:iss_selected_dot="@drawable/default_selected_dot"
                    app:iss_unselected_dot="@drawable/default_unselected_dot"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_mssg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:elevation="5dp"
            android:fontFamily="@font/headline"
            android:shadowColor="@color/black"
            android:text="@string/keep_going_champ"
            android:textColor="#EF6C00"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/section_mssg"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attempt_your_favourite_section"
            android:textSize="18sp"
            android:fontFamily="@font/antic"
            android:textStyle="bold"
            android:textColor="@color/black" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sports_text"
            android:text="@string/_1_sports"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="5dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/sports_pic"
            android:src="@drawable/sports"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/image_displaying_sports" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/history_text"
            android:text="@string/_2_history"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="5dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/history_pic"
            android:src="@drawable/history"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/historical_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/culture_text"
            android:text="@string/_3_culture_and_geography"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="5dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/culture_pic"
            android:src="@drawable/culture"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/image_of_science_new" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/science_text"
            android:text="@string/_4_science"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="5dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/science_pic"
            android:src="@drawable/science"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/image_of_science" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/current_affairs_text"
            android:text="@string/_5_current_affairs"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="5dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/current_affairs_pic"
            android:src="@drawable/current_affairs"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/picture_of_current_affairs" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"/>


    </LinearLayout>

</ScrollView>