<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="bottom"
    android:layout_gravity="start"
    android:background="@drawable/nav_grad_shape">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nav_header_title"
        android:paddingTop="1dp"
        android:text="@string/app_name"
        android:textColor="#607D8B"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/app_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:text="@string/app_mail_id"
        android:textColor="#37474F"
        android:textSize="15sp"
        android:textStyle="italic"
        tools:ignore="SmallSp" />

</LinearLayout>